# AIC_Art_Collection

./: CHANGELOG.md  CONTRIBUTING.md  README.md  Untitled.ipynb  Untitled1.ipynb  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
env4art/: pyvenv.cfg
src/aic_art_collection/: __init__.py  aic_art_collection.py
tests/: test_aic_art_collection.py
