[tool.poetry]
name = "aic_art_collection"
version = "0.2.5"
description = "This python package retrieves artwork collections from the Art Institute of Chicago API in a user-friendly way. 
It helps users to find information about artworks or artists of their interests with artworks visualized. "
authors = ["Shauna Han"]
license = "MIT"
readme = "README.md"
documentation = 'https://aic_art_collection.readthedocs.io'

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.group.dev.dependencies]
myst-nb = "^0.17.1"
sphinx-autoapi = "^2.0.0"
sphinx-rtd-theme = "^1.1.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


